# ransomeware-detector

./: Dockerfile  README.md  config.example.json  data.db  docker-compose.yml  docker-entrypoint.sh  install.bat  install.ps1  install.sh  pyproject.toml  requirements.runtime.txt  requirements.txt  run.bat  run.sh
agents/: __main__.py  agent_client.py  external_device_monitor.py  file_monitor.py  network_monitor.py
cloud/: firebase_config.py  telegram_bot.py  webhook_server.py
dashboard/: __main__.py  app.py  mobile_api.py
dashboard/templates/: index.html
docs/: DOCUMENTATION.md  generate_pdf.py
launcher/: main.py
ml_detector/: realtime_scanner.py  train_model.py  virus_total_api.py
ransomware_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __main__.py  alert_system.py  cloud_server.py  database.py  detection_engine.py  main_server.py
tests/: smoke_test.py
utils/: config.py  entropy_calculator.py  portable_scanner.py
windows/: RansomGuard.spec  WINDOWS_BUILD.md  build.py  setup.iss
