[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ransomware-detector"
version = "1.0.0"
description = "End-to-end ransomware detection: local agents, centralized server, real-time dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "flask==2.3.3",
    "flask-socketio==5.3.4",
    "flask-cors==4.0.0",
    "flask-jwt-extended==4.5.2",
    "python-socketio==5.9.0",
    "eventlet==0.33.3",
    "requests==2.31.0",
    "psutil==5.9.5",
    "watchdog==3.0.0",
    "pyudev==0.24.0; platform_system == 'Linux'",
    "pywin32==306; platform_system == 'Windows'",
    "wmi==1.5.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
full = [
    "firebase-admin==6.2.0",
    "python-telegram-bot==20.6",
    "scikit-learn==1.3.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "joblib==1.3.2",
    "vt-py==0.17.0",
    "sqlalchemy==2.0.19",
    "matplotlib==3.7.2",
    "plotly==5.17.0",
    "cryptography==41.0.7",
]

[project.scripts]
rds-server    = "server.main_server:main"
rds-agent     = "agents.agent_client:main"
rds-dashboard = "dashboard.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "agents*", "dashboard*", "utils*", "ml_detector*", "cloud*"]

[tool.setuptools.package-data]
"dashboard" = ["templates/**/*", "static/**/*"]
